			       =================
				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	The sections

        INCOMPATIBLE CHANGES IN BOGOFILTER (version)
and     MAJOR CHANGES IN BOGOFILTER (version)

	are particularly important.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

0.94.11	2005-05-10

	* Correct variable name in bf_resize.

0.94.10	2005-05-08

	* Substitute path to the same awk program that configure found
	  into bf_compact so it works on systems that have only nawk or gawk
	  but not awk.

	* Substitute path to SUSv2 compliant shell in bf_* script "magic
	  shebang" lines, so they use /usr/xpg4/bin/sh on Solaris 7+
	  and don't fail any more.

	* Repaired t.abort and t.probe tests to work with ancient shells.

	2005-05-07

	* Fixed pathing problem in bogoutil.  Default directory should be "."

	* Revised utility scripts (bf_copy, bf_compact, bf_tar,
          bf_resize) for consistency and Solaris 9 compatibility.

0.94.9	2005-05-06

	* Fixed pathing regression which caused 'bogofilter_dir=dir' option
          to supercede '-d dir' option.

0.94.8	2005-05-03

	* Revised manpage's description of -p (passthrough) option.

	* When configured with --enable-transactions or --disable-transactions
	  - Fixed compilation problem
	  - Fixed bogofilter -Q reporting
	  - Skip t.probe during "make check"

0.94.7	2005-04-30

	* Fix transaction enabling/disabling so that command line
	  options, i.e. --db-transactions=yes/no, are primary and
	  probing is secondary.

0.94.6	2005-04-26

	* Fixed bogoutil help and documentation to show that -d, -l,
	  -w, -p, and -H options expect a filename, not a directory.
	* Refactored bfpath creation to clean up open modes and lessen
	  number of external calls into paths.c
	* Added db-3.2.9 compatibility macro for db->stat().
	* Updated bogominitrain.pl to v1.6

0.94.5	2005-04-23
